# Autonomous-Driving-System

./: .gitignore  README.md
ECU-Control/src/: control.py  keyboard_controller.py
ECU-Core/src/camera_pub/: package.xml  setup.cfg  setup.py
ECU-Core/src/camera_pub/camera_pub/: camera_pub.py
ECU-Core/src/headunit_start/: package.xml  setup.cfg  setup.py
ECU-Core/src/headunit_start/headunit_start/: headunit_start.py
ECU-Core/src/lidar_pub/: CMakeLists.txt  package.xml
ECU-Core/src/lidar_pub/src/: lidar_pub.cpp
ECU-Core/src/receiver/: package.xml  setup.py
ECU-Core/src/receiver/receiver/: receiver.py
ECU-HeadUnit/: CMakeLists.txt  can_setup.sh  run.sh
ECU-HeadUnit/src/: HeadUnit.cpp  HeadUnitQtClass.cpp  HeadUnitQtClass.hpp  qml.qrc
ECU-HeadUnit/src/qml/: ValueSource.qml  main.qml
src/ads_launch/: CMakeLists.txt  package.xml
src/ads_launch/config/: params.yaml  realworld_params.yaml
src/ads_launch/launch/: realworld_ads.launch.py  simulation_ads.launch.py
src/hybrid_a_star/: CMakeLists.txt  package.xml
src/hybrid_a_star/config/: hybrid_a_star_params.yaml
src/hybrid_a_star/include/hybrid_a_star/: path_planning.hpp
src/hybrid_a_star/include/hybrid_a_star/data_structure/: decision_making_struct.h  hybridastar_struct.h
src/hybrid_a_star/include/hybrid_a_star/globalmap/: flipped-track.txt  parsinginfo.txt  waypoints-set.txt
src/hybrid_a_star/include/hybrid_a_star/utils/: loader.hpp
src/hybrid_a_star/launch/: hybrid_a_star_launch.py
src/hybrid_a_star/src/: path_planning.cpp
src/hybrid_a_star/src/map/: map.cpp
src/launch_files/: CMakeLists.txt  package.xml
src/launch_files/config/: params.yaml
src/launch_files/launch/: ads_process.launch.py
src/object_detection/: package.xml  setup.py
src/object_detection/object_detection/: main.py
src/realworld_control/: CMakeLists.txt  package.xml
src/realworld_control/include/realworld_control/: control.hpp
src/realworld_control/include/realworld_control/canprotocol/: can_protocol.hpp
src/realworld_control/src/: control.cpp
src/realworld_control/src/controller/: stanley.cpp
src/realworld_localization/: CMakeLists.txt  package.xml
src/realworld_path_planning/: CMakeLists.txt  package.xml
src/realworld_path_planning/config/: realworld_path_planning_params.yaml
src/realworld_path_planning/include/realworld_path_planning/data_structure/: car_struct.h  ros2_msg_struct.h
src/realworld_path_planning/include/realworld_path_planning/globalmap/: track.txt  waypoints.txt
src/realworld_path_planning/launch/: realworld_path_planning.launch.py
src/realworld_path_planning/src/: path_planning.cpp
src/realworld_path_planning/src/planner/: planner.cpp
src/realworld_perception/: package.xml  setup.cfg  setup.py
src/realworld_perception/realworld_perception/: main.py
src/simulation_control/: CMakeLists.txt  package.xml
src/simulation_control/include/simulation_control/: control.hpp
src/simulation_control/include/simulation_control/controller/: stanley.hpp
src/simulation_control/include/simulation_control/dbcppp/tests/: Config.h
src/simulation_control/include/simulation_control/utils/: example.dbc  msg_structs.h
src/simulation_control/src/: control.cpp  main.cpp
src/simulation_control/src/canprotocol/: can_protocol.cpp
src/simulation_path_planning/: CMakeLists.txt  package.xml
src/simulation_path_planning/include/simulation_path_planning/decision_making/: decision_making.hpp
src/simulation_path_planning/include/simulation_path_planning/hybridastar/: a_star.tpp
src/simulation_path_planning/include/simulation_path_planning/map/: map.hpp
src/simulation_path_planning/include/simulation_path_planning/planner/: planner.hpp
src/simulation_path_planning/launch/: simulation_path_planning_launch.py
src/simulation_path_planning/src/: main.cpp  path_planning.cpp
src/simulation_path_planning/src/decision_making/: decision_making.cpp
src/simulation_perception/: package.xml  setup.cfg  setup.py
src/simulation_perception/simulation_perception/: main.py
src/stanley/: CMakeLists.txt  package.xml
src/stanley/include/stanley/utils/: car_struct.h
